# pm_co_pilot_planning

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: Prompts.yaml  Prompts_Agent_Mode.yaml  Prompts_Parallel_Tool_Calling.yaml  Prompts_Pre-Post_Skills.yaml  Prompts_old_2.yaml  Prompts_old_3.yaml  assembly_config.yaml  blacklist.yaml  service_registry.yaml  whitelist.yaml
files/: knowledge_base.json  knowledge_base_test.json  service_req_dict.json  services_and_frames.json  services_and_frames_of.json  services_and_frames_wc.json  system_description.json  topic_tf.yaml
launch/: pm_co_pilot_planning.launch.py
pm_co_pilot_planning/: pm_co_pilot_planning.py  test.ipynb
pm_co_pilot_planning/submodules/: PmCoPilotProgrammingApp.py  agent.py
pm_co_pilot_planning/submodules/langchain/: LLMConfig.py
pm_co_pilot_planning/submodules/langchain/tools/: AssemblyKnowledgeTools.py  ServiceRegistry.py  Tools.py
