<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pm_co_pilot_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wiemann@match.uni-hannover.de">match-mover</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>langchain</exec_depend>
  <exec_depend>langgraph</exec_depend>
  <exec_depend>openai</exec_depend>
  <exec_depend>langchain-openai</exec_depend>
  <exec_depend>langchain-community</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
